@@ -1162,7 +1162,7 @@ download (load_arg_string, from_tty)
   /* FIXME: should be checking for errors from bfd_close (for one thing,
      on error it does not free all the storage associated with the
      bfd).  */
-  make_cleanup ((make_cleanup_func) bfd_close, pbfd);
+  make_cleanup_bfd_close (pbfd);
 
   QUIT;
   immediate_quit++;
